2007-02-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindGtkMM.cmake: added basic unix support (via pkgconfig)

2007-02-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: wrong header file order.

	* src/libYARP_OS/include/yarp/os/Bottle.h: give public
	access to binary form of bottles.

	* src/libYARP_dev/include/yarp/dev/PolyDriver.h: add
	reference-counting to PolyDrivers.

	* src/libYARP_dev/CMakeLists.txt: add unit testing
	to libYARP_dev - now that fake devices are available, 
	at least partial automated testing should be easier.

2007-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/port_expert.dox: started documenting some of the 
	deeper port stuff.

	* CMakeLists.txt: added simple (unix-only) "dox" target for
	doxygen documentation.

2007-02-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp,PortCoreOutputUnit.cpp:
	Francesco Nori reported a problem that was caused by the 
	change on 2007-01-26 that adds information about whether replies
	are expected to a message.  In some configurations this change
	was not compatible with communicating with older YARP processes.
	Should be fixed now.

2007-02-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* configure.ac: added core libYARP_dev library to autoconf build,
	along with the yarpdev program.

2007-02-06 Lorenzo Natale <nat@liralab.it>

	* src/libYARP_dev/src/dragonfly/winnt/yarp/DragonflyDeviceDriver.cpp:
	corrected erratic behavior on setGain/setShutter/setBrightness and
	corresponding getters.
	
	* src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h: 
	added getWhiteBalanceMethod to IFrameGrabberControl and changes
	propagated to the following files -	
	- src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h
	- src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h
	- src/libYARP_dev/src/dragonfly/winnt/yarp/DragonflyDeviceDriver.cpp
	- src/libYARP_dev/src/dragonfly/common/yarp/DragonflyDeviceDriver.h
