@@ -1,0 +1,15 @@
+# Make a motor and camera device.
+# Put the motor device on the network.
+
+device group
+
+[part mymotor]
+device test_motor
+axes 10
+
+[part mycam]
+device test_grabber
+
+[part broadcast]
+device controlboard
+subdevice mymotor
